Current :
OK - fix: bug preventing to get the code in a .mli
OK - fix: missing spaces after carriage return in types (Odoc_misc.string_of_type_expr)
OK - fixes: some bugs in the text parser 
     ( ]} meaning end of code and somehting else instead of end of precode)
OK - add: in Odoc_info: text_of_string, text_string_of_text, info_of_string
OK - fix: better output of titles in html (use more the style)
OK - add: -intro option to use a file content as ocamldoc comment to use as
OK   introduction for LaTeX document and HTML index page
OK - add: the HTML generator generates the code of the module if available
OK - add: field m_code for modules, to keep the code of top modules
OK - fix: display "include Foo" instead of "include module Foo" in Latex, Man, Texi
OK - fix: not display comments associated to include directives
OK - fix: bad display of type parameters for class and class types
- need to fix display of type parameters for inherited classes/class types


======

Release 3.05 :
 - added link tags in html header to reference sections and subsections
   in each page (for browser which handle those tags)
 - no titles nor lists in first sentence of text in indexes and latex titles
 - only one table for the titles in HTML output
 - fix of bad comment association for types in .ml files
 - dumps now contain a magic number, checked when dumps are loaded
 - new option -o to use with texi, latex and dot generators
 - new .code CSS class used
 - better output for classes and modules, with their type
 - added texinfo generator, by Olivier Andrieu
 - removed iso generator, which became the odoc_check custom generator
 - link syntax {{:url}text} added to the manual
 - (** comments in code is colorized in ocaml code html pages
 - new class .code in style
 - new generator : -dot . Output dot code to display
   modules or types dependencies.
 - new option -inv-merge-ml-mli to inverse the priority of
   .ml and .mli when merging
 - option -werr becomes -warn-error